[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/customers/effects/patience_change/patience_meter.gd" type="Script" id=1]
[ext_resource path="res://characters/customers/effects/patience_change/exclamation mark.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.14902, 0.6, 0.654902, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.121569, 0.780392, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.376471, 0.376471, 0.376471, 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.00653595, 0.538636 ), 0.0, 0.0, 0, 0, Vector2( 0.496732, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.993464, 0.529545 ), 0.0, 0.0, 0, 0 ]

[node name="PatienceMeter" type="Node2D"]
script = ExtResource( 1 )

[node name="PointChange" type="Node2D" parent="."]
position = Vector2( 24.8586, -45.5845 )

[node name="ExtraBar" type="ProgressBar" parent="."]
margin_left = -24.0
margin_top = -44.0
margin_right = 51.0
margin_bottom = -34.0
mouse_filter = 2
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
max_value = 1.5
value = 1.25
allow_greater = true
allow_lesser = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MainBar" type="ProgressBar" parent="."]
margin_left = -24.0
margin_top = -44.0
margin_right = 26.0
margin_bottom = -34.0
mouse_filter = 2
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 1.0
value = 0.5
allow_greater = true
allow_lesser = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PatienceParticles" type="CPUParticles2D" parent="."]
position = Vector2( -1.02213, -64.9869 )
amount = 1
texture = ExtResource( 2 )
gravity = Vector2( 0, 0 )
scale_amount = 2.0
scale_amount_curve = SubResource( 3 )

[node name="HappyParticles" type="CPUParticles2D" parent="."]
position = Vector2( 27.1739, -39.0312 )
scale = Vector2( 0.5, 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.06
